--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="jumbotron">
-    <input  type="text" class="form-control mr-sm-2" placeholder="Github username">
+    <input [formControl]="findControl" type="text" class="form-control mr-sm-2" placeholder="Github username">
   </div>
   <app-inteface *ngIf="user" [user]="user"></app-inteface>
   <!-- <app-not-found *ngIf="error"></app-not-found> -->
