Link to the Api

--- a/src/app/inteface/inteface.component.html
+++ b/src/app/inteface/inteface.component.html
@@ -1,36 +1,32 @@
-<div class="github-card user-card">
-  <div class="header"></div>
-  <a href="{{user.html_url}}" target="_blank" class="avatar">
-    <img [src]="user.avatar_url+'&s=80'" [alt]="user.name">
-  </a>
-  <div class="content">
-    <h1>{{user.name}}</h1>
-    <span>{{user.created_at | date}}</span> -
-    <span>{{user.location}}
-      <i class="fas fa-map-marker"></i>
-    </span>
-    <div class="alert alert-success">
-      <p class="mb-0">{{user.bio}}</p>
+<div class="container">
+  <form action="" class="search-form">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search git users with username" [(ngModel)]="username" name="username" (keyup)="findProfile()">
+      </div>
+    </form>
+    <div *ngIf="profile">
+      <div class="row">
+        <div class="col-md-4">
+          <h6> Profile Name :{{profile.name}} </h6>
+          <h5>Username : {{profile.login}}</h5>
+          <a href="{{profile.html_url}}" target="_blank" class="btn btn-outline-success btn-sm">View profile on github</a><hr>
+          <img src="{{profile.avatar_url}}" class="img-circle img-responsive" alt="Profile Image">
+        </div>
+        <div class="col-md-8">
+                <p> <span class="label label-success">Number Of Repositories :{{profile.public_repos}}</span></p>
+
+                    <h3 class="">Repositories</h3>
+                  <div class="" *ngFor="let repo of repos">
+                    <ul>
+                    <li>
+                    <p class="">
+                      {{repo.name+"--"+repo.description}}
+                      <a href="{{repo.html_url}}" target="_blank" class="btn btn-sm btn-outline-info pull-right">View this project on github</a>
+                    </p>
+                    </li>
+                    </ul>
+                </div>
+          </div>
+      </div>
     </div>
-    <ul class="status">
-      <li>
-        <a [href]="'https://github.com/'+user.login+'?tab=repositories'">
-          <strong>{{user.public_repos}}</strong>
-          <i class="fab fa-github"></i>Repos
-        </a>
-      </li>
-      <li>
-        <a href="{{user.html_url}}">
-          <strong>{{user.public_gists}}</strong>
-          <i class="fas fa-book-open"></i>Gists
-        </a>
-      </li>
-      <li>
-        <a [href]="'https://github.com/'+user.login+'/followers'">
-          <strong>{{user.followers}}</strong>
-          <i class="fas fa-users"></i>Followers
-        </a>
-      </li>
-    </ul>
   </div>
-</div>
