Reduce image size

--- a/src/app/inteface/inteface.component.html
+++ b/src/app/inteface/inteface.component.html
@@ -6,21 +6,23 @@
     </form>
     <div *ngIf="profile">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 padd">
           <h6> Profile Name :{{profile.name}} </h6>
           <h5>Username : {{profile.login}}</h5>
           <a href="{{profile.html_url}}" target="_blank" class="btn btn-outline-success btn-sm">View profile on github</a><hr>
-          <img src="{{profile.avatar_url}}" class="img-circle img-responsive" alt="Profile Image">
+          <img src="{{profile.avatar_url}}" class="img-circle img-responsive" alt="Profile Image"><br><br>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 padd">
                 <p> <span class="label label-success">Number Of Repositories :{{profile.public_repos}}</span></p>
 
                     <h3 class="">Repositories</h3>
                   <div class="" *ngFor="let repo of repos">
                     <ul>
                     <li>
-                    <p class="">
-                      {{repo.name+"--"+repo.description}}
+
+                      <h4>{{repo.name }}<br></h4>
+                      <p>
+                      {{repo.description}}
                       <a href="{{repo.html_url}}" target="_blank" class="btn btn-sm btn-outline-info pull-right">View this project on github</a>
                     </p>
                     </li>
